testing gutter fix on iphone

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -69,7 +69,7 @@ label{
   letter-spacing: -1px;
   width: 50%;
   display: inline-block;
-  margin-left: 8px;
+  margin-left: 4px;
   padding-left: 42px;
 }
 
